<resources>
    <string name="app_name" translatable="false">Swecker</string>
    <string name="settings_title">Settings</string>
    <string name="account_section_title">Account</string>
    <string name="account_section_description">Manage synchronization across devices</string>
    <string name="theme_section_title">Theme</string>
    <string name="theme_section_description">Manage appearance and colors</string>
    <string name="sounds_section_title">Sounds and vibration</string>
    <string name="sounds_section_description">Manage alarm sounds</string>
    <string name="about_section_title">About</string>
    <string name="about_section_description">App information</string>
    <string name="account_change_name">Tap to change name</string>
    <string name="account_change_username">Tap to change username</string>
    <string name="sounds_ringtone">Ringtone</string>
    <string name="sounds_ringtone_duration">Ringtone duration</string>
    <string name="sounds_volume">Volume</string>
    <string name="sounds_vibration">Vibration</string>
    <string name="dark_mode_system">Use system settings</string>
    <string name="dark_mode_disabled">Disabled</string>
    <string name="dark_mode_enabled">Enabled</string>
    <string name="dark_mode_dialog_title">Dark mode</string>
    <string name="dismiss_dialog">Dismiss</string>
    <string name="ringtone_default">Nuclear</string>
    <string name="ringtone_variation_1">Morning Joy</string>
    <string name="ringtone_variation_2">Alarm Clock</string>
    <string name="confirm_dialog">Confirm</string>
    <string name="duration_seconds_5">5 seconds</string>
    <string name="duration_seconds_30">30 seconds</string>
    <string name="duration_minute_1">1 minute</string>
    <string name="duration_minutes_5">5 minutes</string>
    <string name="password_placeholder" translatable="false">Password</string>
    <string name="sign_up_button">Sign up</string>
    <string name="log_in_button">Log in</string>
    <string name="ask_signup">Need an account?</string>
    <string name="feature_sync">Sync your alarms across multiple devices</string>
    <string name="feature_groups">Create alarms for you and your friends</string>
    <string name="feature_channels">Subscribe to alarm channels</string>
    <string name="feature_chat">Chat with other people subscribed to the same alarms</string>
    <string name="ask_existing_account">Already have an account?</string>
    <string name="go_back">Go back</string>
...
    <string name="personal">Personal</string>
    <string name="groups">Groups</string>
    <string name="suggest_alarm_selection">Select an alarm</string>
    <string name="suggest_group_selection">Select a group</string>
    <string name="suggest_channel_selection">Select a channel</string>
    <string name="members">members</string>
    <string name="palette">Palette</string>
    <string name="example_alarm_name">Example alarm</string>
    <string name="new_channel">New channel</string>
    <string name="new_group">New group</string>
    <string name="add_a_friend">Add a friend</string>
    <string name="alarms_overview">Alarms overview</string>
    <string name="contacts_management">Contacts management</string>
...
