...
    const val removeFriend = "removeFriend"
    const val acceptFriend = "acceptFriend"
    const val dragRingingAlarm = "dragRingingAlarm"
    const val addChannelAlarm = "addChannelAlarm"
    const val sendMessage = "sendMessage"
    const val alarmCardTime = "alarmCardTime"
    const val settingsSwitch = "settingsSwitch"
    const val popupOption = "popupOption"
    const val volumeSlider = "volumeSlider"
}

